<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.1.0</version>
    <relativePath/>
  </parent>
  <groupId>com.dnnthanh.wallet</groupId>
  <artifactId>digital-wallet-backend</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <properties>
    <java.version>25</java.version>
    <spring-boot.version>4.1.0</spring-boot.version>
    <spring-cloud.version>2025.1.2</spring-cloud.version>
    <mapstruct.version>1.6.3</mapstruct.version>
    <lombok.version>1.18.46</lombok.version>
    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
    <commons-collections4.version>4.5.0</commons-collections4.version>
    <maven.compiler.parameters>true</maven.compiler.parameters>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spotless.version>2.44.5</spotless.version>
    <jacoco.version>0.8.13</jacoco.version>
    <archunit.version>1.4.1</archunit.version>
    <awaitility.version>4.3.0</awaitility.version>
    <testcontainers.version>2.0.5</testcontainers.version>
    <resilience4j.version>2.4.0</resilience4j.version>
    <maven.enforcer.version>3.5.0</maven.enforcer.version>
  </properties>
  <dependencies>
    <dependency><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId><version>${lombok.version}</version><scope>provided</scope></dependency>
    <dependency><groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId></dependency>
    <dependency><groupId>org.apache.commons</groupId><artifactId>commons-collections4</artifactId><version>${commons-collections4.version}</version></dependency>
    <dependency><groupId>commons-codec</groupId><artifactId>commons-codec</artifactId></dependency>
    <dependency><groupId>com.tngtech.archunit</groupId><artifactId>archunit-junit5</artifactId><version>${archunit.version}</version><scope>test</scope></dependency>
    <dependency><groupId>org.awaitility</groupId><artifactId>awaitility</artifactId><version>${awaitility.version}</version><scope>test</scope></dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency><groupId>com.dnnthanh.wallet</groupId><artifactId>be-platform-starter</artifactId><version>${project.version}</version></dependency>
      <dependency><groupId>com.dnnthanh.wallet</groupId><artifactId>be-platform-cache-starter</artifactId><version>${project.version}</version></dependency>
      <dependency><groupId>org.testcontainers</groupId><artifactId>testcontainers-bom</artifactId><version>${testcontainers.version}</version><type>pom</type><scope>import</scope></dependency>
      <dependency><groupId>org.springframework.cloud</groupId><artifactId>spring-cloud-dependencies</artifactId><version>${spring-cloud.version}</version><type>pom</type><scope>import</scope></dependency>
      <dependency><groupId>org.mapstruct</groupId><artifactId>mapstruct</artifactId><version>${mapstruct.version}</version></dependency>
      <dependency><groupId>org.mapstruct</groupId><artifactId>mapstruct-processor</artifactId><version>${mapstruct.version}</version></dependency>
      <dependency><groupId>io.github.resilience4j</groupId><artifactId>resilience4j-circuitbreaker</artifactId><version>${resilience4j.version}</version></dependency>
      <dependency><groupId>io.github.resilience4j</groupId><artifactId>resilience4j-bulkhead</artifactId><version>${resilience4j.version}</version></dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin><groupId>org.springframework.boot</groupId><artifactId>spring-boot-maven-plugin</artifactId><version>${spring-boot.version}</version></plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><version>3.14.1</version>
          <configuration>
            <release>${java.version}</release>
            <parameters>true</parameters>
            <proc>full</proc>
            <annotationProcessorPaths>
              <path><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId><version>${lombok.version}</version></path>
              <path><groupId>org.mapstruct</groupId><artifactId>mapstruct-processor</artifactId><version>${mapstruct.version}</version></path>
              <path><groupId>org.projectlombok</groupId><artifactId>lombok-mapstruct-binding</artifactId><version>${lombok-mapstruct-binding.version}</version></path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId></plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId><artifactId>maven-enforcer-plugin</artifactId><version>${maven.enforcer.version}</version>
        <executions><execution><id>require-java-25</id><phase>validate</phase><goals><goal>enforce</goal></goals><configuration><rules><requireJavaVersion><version>[25,26)</version><message>This project requires Java 25. Set JAVA_HOME to a JDK 25 installation.</message></requireJavaVersion></rules></configuration></execution></executions>
      </plugin>
      <plugin><groupId>org.jacoco</groupId><artifactId>jacoco-maven-plugin</artifactId><version>${jacoco.version}</version><executions><execution><goals><goal>prepare-agent</goal></goals></execution><execution><id>report</id><phase>verify</phase><goals><goal>report</goal></goals></execution></executions></plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId><artifactId>spotless-maven-plugin</artifactId><version>${spotless.version}</version>
        <configuration><java><googleJavaFormat><version>1.28.0</version><style>AOSP</style></googleJavaFormat><removeUnusedImports/><trimTrailingWhitespace/><endWithNewline/></java></configuration>
        <executions><execution><id>spotless-check</id><phase>verify</phase><goals><goal>check</goal></goals></execution></executions>
      </plugin>
    </plugins>
  </build>
  <modules>
    <module>platform/be-platform-starter</module>
    <module>platform/be-platform-cache-starter</module>
    <module>services/be-auth-api</module>
  </modules>
</project>
